test/test-files/analyzer/builtins/error-printf-wrong-type3/exception.out
Semantic error in : ./test-files/analyzer/builtins/error-printf-wrong-type3/source.spice:3:18:
Types of printf call not matching: Template string expects string, but got int*

3  printf("%s", &integer);
                ^^^^^^^^